Fixed layout problem in mobile query

--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -211,6 +211,9 @@ h1, h2, h3, h4, strong {
         align-items: center;
         padding-bottom: 20px;
     }
+    #testimonial-section div {
+        flex-direction: column;
+    }
     #testimonial-section h4 {
         color: var(--grayish-blue);
         margin-top: 70px;
